<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Silahkan login terlebih dahulu."
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_container"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:layout_marginRight="@dimen/dimen_30"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_layout_form"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:background="@null"
                android:hint="@string/hint_id"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/activity_margin_half"
                android:paddingRight="@dimen/activity_margin_half"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/bg_input_layout_form"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_margin_half"
                android:paddingRight="@dimen/activity_margin_half"
                android:textCursorDrawable="@null" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/activity_margin_half"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_fadtar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_half"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:text="@string/daftar"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_30"
            android:visibility="invisible"
            app:indicatorColor="@android:color/black"
            app:indicatorName="BallPulseIndicator" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_30"
        android:background="@null"
        android:text="@string/lbl_create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>